Integrated facebook API and change app styles.

--- a/ImageRotateAndZoom/Info.plist
+++ b/ImageRotateAndZoom/Info.plist
@@ -45,5 +45,35 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>fb173456643058062</string>
+            </array>
+        </dict>
+    </array>
+    <key>FacebookAppID</key>
+    <string>173456643058062</string>
+    <key>FacebookDisplayName</key>
+    <string>FunnyTime</string>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>fbapi</string>
+        <string>fb-messenger-share-api</string>
+        <string>fbauth2</string>
+        <string>fbshareextension</string>
+    </array>
+    
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>fbapi</string>
+        <string>fb-messenger-share-api</string>
+        <string>fbauth2</string>
+        <string>fbshareextension</string>
+    </array>
+    
 </dict>
 </plist>
